<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edit_text"
        android:hint="@string/enter_new_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_new_text" />
    <Button
        android:tag="IGNORE_HOOK"
        android:id="@+id/apply_button"
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:tag="IGNORE_HOOK"
        android:id="@+id/origin_button"
        android:text="@string/perform_origin_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>