<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="?attr/colorOnPrimary"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="?attr/colorSecondary"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/about"
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/about_description"
                app:layout_constraintTop_toBottomOf="@+id/about_title"
                android:layout_marginTop="12dp"
                android:id="@+id/about_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="12dp"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/requirement_content"
                app:layout_constraintTop_toBottomOf="@id/about_content"
                android:id="@+id/about_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        app:icon="@drawable/ic_baseline_find_in_page_24"
        android:id="@+id/getCodeFab"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>